--- a/env.example
+++ b/env.example
@@ -1,10 +1,9 @@
-# SMTP Configuration for sending emails
-SMTP_HOST=smtp.gmail.com
+# SMTP Configuration for sending emails (SMTP2GO)
+SMTP_HOST=mail.smtp2go.com
 SMTP_PORT=587
-SMTP_SECURE=false
-SMTP_USER=your-email@gmail.com
-SMTP_PASS=your-app-password
-SMTP_FROM=your-email@gmail.com
+SMTP_USER=your-smtp2go-username
+SMTP_PASS=your-smtp2go-password
+SMTP_FROM=your-verified-email@yourdomain.com
 
 # Email address where contact form submissions will be sent
 CONTACT_EMAIL=your-email@gmail.com
