--- a/env.example
+++ b/env.example
@@ -10,3 +10,7 @@ CONTACT_EMAIL=your-email@gmail.com
 
 # Your website URL (optional, for email footers)
 NEXT_PUBLIC_SITE_URL=https://your-domain.vercel.app
+
+# Cloudflare Turnstile (for bot protection)
+NEXT_PUBLIC_TURNSTILE_SITE_KEY=your-turnstile-site-key
+TURNSTILE_SECRET_KEY=your-turnstile-secret-key
