--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "nodemailer": "^6.9.7",
-    "@marsidev/react-turnstile": "^3.0.0"
+    "react-turnstile": "^0.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
