--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "next": "14.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "nodemailer": "^6.9.7",
-    "react-turnstile": "^0.1.0"
+    "nodemailer": "^6.9.7"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
